<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="name">Name</string>
    <string name="ph_number">Ph. Number</string>
    <string name="address">Address</string>
    <string name="verify">VERIFY</string>
    <string name="otp">OTP</string>
    <string name="save">SAVE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
</resources>