<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blankbg"
    tools:context=".LoginActivity">

    <!-- Profile Picture -->

    <!-- User Information Card -->

    <ImageView
        android:id="@+id/profilePicImageView"
        android:layout_width="230dp"
        android:layout_height="300dp"
        android:contentDescription="@string/profile_picture_description"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="413dp"
        android:layout_height="407dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilePicImageView">

        <!-- Verification Layout -->
        <LinearLayout
            android:id="@+id/verificationLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#e49b46"
            android:orientation="vertical"
            android:padding="40dp">

            <!-- Name Input -->
            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:minHeight="48dp"
                android:textColorHint="@color/brown"
                android:textStyle="bold" />

            <!-- Phone Number Layout -->
            <LinearLayout
                android:id="@+id/phoneNumberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <!-- Phone Number Input -->
                <EditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/ph_number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:textColorHint="@color/brown"
                    android:textStyle="bold" />

                <!-- Verify Button -->
                <Button
                    android:id="@+id/verifyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/button_background"
                    android:text="@string/verify"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Address Input -->
            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:minHeight="48dp"
                android:textColorHint="@color/brown"
                android:textStyle="bold" />

            <!-- OTP Input -->
            <EditText
                android:id="@+id/otpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/otp"
                android:inputType="number"
                android:maxLines="1"
                android:minHeight="48dp"
                android:textColorHint="@color/brown"
                android:textStyle="bold"
                android:visibility="gone" />

            <!-- Save Button -->
            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
